crates/keron-lang/tests/corpus/errors/check/fn_return_type_mismatch.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Int`, found `String`
  --> 2:3
  |
2 |   "not an int"
  |   ^^^^^^^^^^^^
